<?xml version="1.0" encoding="utf-8"?>
<!--
	Beaconator scans for Bluetooth LE devices and recods the scans to a database.
	Based on the Open Source BluetoothLeGatt Android program 
	(see http://developer.android.com/samples/BluetoothLeGatt/index.html)
    Copyright (C) 2014  Jesse M. Blum

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Affero General Public License as
    published by the Free Software Foundation, either version 3 of the
    License, or (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Affero General Public License for more details.

    You should have received a copy of the GNU Affero General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_scan"
          android:title="@string/menu_scan"
          android:orderInCategory="100"
          android:showAsAction="ifRoom|withText"/>
    <item android:id="@+id/menu_stop"
          android:title="@string/menu_stop"
          android:orderInCategory="101"
          android:showAsAction="ifRoom|withText"/>
    <!-- Items such as Settings that should always be in the overflow -->
    <item android:id="@+id/action_backup"
          android:title="@string/action_backup"
          android:showAsAction="ifRoom|withText" />
</menu>
